# VariableDensitySubsampling

./: .clang-format  CMakeLists.txt  LICENSE  Readme.md  getwheelname.py.in  setup.py.in
apps/: CMakeLists.txt  maskImage.cpp
include/: Approx.h  Point.h  PoissonSubsampling.h  SamplingMask.h  SomeFunctions.h  StdoutRedirector.h  VDSamplingUpper.h  VariableDensity.h
interfaces/: CMakeLists.txt
interfaces/python/: CMakeLists.txt  environment.yml
interfaces/python/src/: PythonInterface.cpp
interfaces/python/subsample/: __init__.py.in
src/: Approx.cpp  Approx.h  CMakeLists.txt  LinkedList.cpp  LinkedList.h  Point.cpp  PoissonSubsampling.cpp  SamplingMask.cpp  SomeFunctions.cpp  StdoutRedirector.cpp  SubsampleMain.cpp  SubsampleMain.h  SubsamplePy.cpp  VDSamplingUpper.cpp  VDSamplingUpper.h  VariableDensity.cpp
tests/: CMakeLists.txt  TestMain.cpp
